@@ -1,3 +1,9 @@
+Tue May 22 02:46:13 2001  Tim Janik  <timj@gtk.org>
+
+	* gobject.c (g_value_set_object): make g_value_set_object()
+	take a gpointer v_object so people don't need to G_OBJECT()
+	cast NULL pointers (C code convenience).
+
 Mon May 14 01:49:01 2001  Tim Janik  <timj@gtk.org>
 
 	* gsignal.[hc] (g_signal_handler_is_connected): new function
